--- a/configure.ac.in
+++ b/configure.ac.in
@@ -34,7 +34,7 @@ dnl *** Initialize autoconf ***
 dnl ***************************
 AC_COPYRIGHT([Copyright (c) 2004-2010 os-cillation.
 Copyright (c) 2004-2019 Xfce Development Team])
-AC_INIT([exo], [libexo_version], [https://bugzilla.xfce.org/])
+AC_INIT([exo], [libexo_version], [https://gitlab.xfce.org/xfce/exo])
 AC_PREREQ([2.60])
 AC_CONFIG_MACRO_DIR([m4])
 AC_REVISION([@REVISION@])
