--- a/configure.ac.in
+++ b/configure.ac.in
@@ -36,7 +36,7 @@ AC_COPYRIGHT([Copyright (c) 2004-2010 os-cillation.
 Copyright (c) 2004-2019 Xfce Development Team])
 AC_INIT([exo], [libexo_version], [https://gitlab.xfce.org/xfce/exo])
 AC_PREREQ([2.60])
-AC_CONFIG_MACRO_DIR([m4])
+AC_CONFIG_MACRO_DIRS([m4])
 AC_REVISION([@REVISION@])
 AC_CANONICAL_TARGET()
 
