Adds new README.md and updates AM_INIT_AUTOMAKE macro with foreign option

--- a/Makefile.am
+++ b/Makefile.am
@@ -33,7 +33,7 @@ EXTRA_DIST =								\
 	HACKING								\
 	INSTALL								\
 	NEWS								\
-	README								\
+	README.md								\
 	THANKS								\
 	intltool-extract.in						\
 	intltool-merge.in						\
