--- a/Makefile.am
+++ b/Makefile.am
@@ -31,9 +31,8 @@ EXTRA_DIST =								\
 	COPYING.LIB							\
 	ChangeLog							\
 	HACKING								\
-	INSTALL								\
 	NEWS								\
-	README								\
+	README.md                           \
 	THANKS								\
 	intltool-extract.in						\
 	intltool-merge.in						\
