--- a/configure.ac.in
+++ b/configure.ac.in
@@ -108,7 +108,7 @@ dnl ********************************
 dnl *** Check for basic programs ***
 dnl ********************************
 AM_PROG_AS()
-AC_PROG_CC_C99
+AC_PROG_CC()
 AM_PROG_CC_C_O()
 AC_PROG_INSTALL()
 IT_PROG_INTLTOOL([intltool_minimum_version], [no-xml])
