--- a/Makefile.am
+++ b/Makefile.am
@@ -44,8 +44,6 @@ DISTCLEANFILES =							\
 	intltool-update
 
 DISTCHECK_CONFIGURE_FLAGS =						\
-	--enable-gtk-doc						\
-	--enable-gen-doc						\
-	--with-gio-module-dir=distcheck
+	--enable-gtk-doc
 
 # vi:set ts=8 sw=8 noet ai nocindent:
