--- a/configure.ac.in
+++ b/configure.ac.in
@@ -172,7 +172,7 @@ XDT_CHECK_LIBX11_REQUIRE()
 dnl *************************
 dnl *** Check for gtk-doc ***
 dnl *************************
-GTK_DOC_CHECK([1.9])
+GTK_DOC_CHECK([1.20])
 
 dnl ***********************************
 dnl *** Check for debugging support ***
@@ -227,7 +227,7 @@ AC_OUTPUT([
 Makefile
 docs/Makefile
 docs/reference/Makefile
-docs/reference/version.xml
+docs/man/Makefile
 exo/Makefile
 exo/exo-2.pc
 exo/exo-config.h
