--- a/configure.ac.in
+++ b/configure.ac.in
@@ -150,9 +150,11 @@ dnl *** Check for i18n support ***
 dnl ******************************
 AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["$PACKAGE"], [Name of default gettext domain])
 AC_SUBST([GETTEXT_PACKAGE])
-
 AM_GNU_GETTEXT([external])
 AM_GNU_GETTEXT_VERSION([0.19.8])
+AC_SEARCH_LIBS([bind_textdomain_codeset], [intl],
+  [AC_DEFINE([HAVE_BIND_TEXTDOMAIN_CODESET], [1], [Define to 1 if you have the 'bind_textdomain_codeset' function.])],
+  [])
 
 dnl ***********************************
 dnl *** Check for required packages ***
