build: Add missing GETTEXT_PACKAGE definition
Fixes: b71065677f879e34d87a49600baf5974b0b15636
Related: https://gitlab.xfce.org/xfce/xfce4-dev-tools/-/issues/41#note_66003

--- a/configure.ac.in
+++ b/configure.ac.in
@@ -148,6 +148,7 @@ fi
 dnl ******************************
 dnl *** Check for i18n support ***
 dnl ******************************
+GETTEXT_PACKAGE="$PACKAGE"
 AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["$PACKAGE"], [Name of default gettext domain])
 AC_SUBST([GETTEXT_PACKAGE])
 AM_GNU_GETTEXT([external])
