exo: Explicitly add GIO_UNIX_CFLAGS
Fixes the following on NixOS:

exo-execute.c:25:10: fatal error: gio/gdesktopappinfo.h: No such file or directory
   25 | #include <gio/gdesktopappinfo.h>
      |          ^~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.

The reason here is the same as https://gitlab.xfce.org/xfce/xfce4-session/-/merge_requests/51.
Here XDT_CHECK_OPTIONAL_PACKAGE does manage to find gio-unix-2.0, so HAVE_GIO_UNIX is defined,
it is just the cflags missing for us.

--- a/exo/Makefile.am
+++ b/exo/Makefile.am
@@ -84,6 +84,7 @@ libexo_2_la_SOURCES =							\
 libexo_2_la_CFLAGS =							\
 	$(LIBXFCE4UTIL_CFLAGS)						\
 	$(GIO_CFLAGS)							\
+	$(GIO_UNIX_CFLAGS)							\
 	$(GTK_CFLAGS)
 
 libexo_2_la_LDFLAGS =							\
